# knowledge-rag-proxy

./: .env.example  .gitignore  AGENTS.md  BUG_CYRILLIC_BM25.md  README.md  config.example.yaml  package-lock.json  pyproject.toml
plugin/: README.md  config.json  package-lock.json  package.json  tsconfig.json
plugin/hooks/: init.ts  user-prompt-submit.ts
plugin/src/: attachments.ts  client.ts  config.ts  state.ts  stream.ts  tool_helpers.ts  vellum-plugin-api.d.ts  workspace.ts
plugin/tools/: grim_download.ts  grim_file.ts  grim_file_info.ts  grim_list_files.ts  grim_markitdown.ts  grim_move.ts  grim_reindex.ts  grim_remove.ts  grim_search.ts  grim_status.ts  grim_update_content.ts  grim_upload.ts  grim_upload_content.ts  grim_upload_workspace.ts  kb_list.ts  kb_search.ts  kb_upload.ts  krp_download_document.ts  krp_get_document.ts  krp_list_documents.ts  krp_move_document.ts  krp_remove_document.ts  krp_search_knowledge.ts  krp_upload_content.ts  (+1 more)
scripts/: backup.sh  deploy.sh  kb-proxy.plist  kb-proxy.service  run-server.sh
server/: __init__.py  app.py  auth.py  backup.py  deps.py  env_config.py  errors.py  logging_config.py  patches.py  paths.py  responses.py  schemas.py  snippet.py  startup.py  watcher.py
tests/: conftest.py  test_doc_store_crud.py  test_doc_store_search.py  test_embedding_batching.py  test_endpoints.py  test_index_queue.py  test_indexing.py  test_ingest_chunk_text.py  test_ingest_chunker.py  test_ingest_prepare.py  test_markitdown_parser.py  test_reconcile.py  test_startup_probes.py  test_store_models.py  test_store_schema.py
(+40 files in other folders)
