[project]
name = "grimoire"
version = "0.1.0"
description = "Self-hosted document knowledge base with a Vellum plugin client"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "markitdown[pdf,docx,pptx,xlsx]>=0.1.0",
    "platformdirs>=4.10.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "surrealdb>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
testpaths = ["tests"]
